# yabm25

./: README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  test.yml
examples/: README.md  persistent_index.py  preprocessing.py  quickstart.py
tests/: test_core.py  test_variants.py
yabm25/: __init__.py  core.py  index.py  utils.py  variants.py
