[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yabm25"
dynamic = ["version"]
authors = [
  { name="Ali Muhammad", email="ali@quantlix.com" }
]
description = "Yet Another Best Matching 25 (YABM25) ranking algorithm"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "pyarrow>=19.0.0",
]

[tool.setuptools.dynamic]
version = {attr = "yabm25.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
